# kvm_db

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  README_CMAKE.md  Requirements_Specification.md  build.sh  debug_kernel.sh
cmake/: CXX23Features.cmake  CompilerWarnings.cmake  DriverIntegration.cmake  Installation.cmake  ProjectOptions.cmake  config.h.in
docs/: REQUITEMENTS-BASIC.md  uringblk-specification.md
driver/: IMPLEMENTATION.md  Makefile  Makefile.test  README.md  README_ENHANCED.md  README_URINGBLK.md  test_device_backend.sh  test_enhanced.sh  uringblk_driver.h  uringblk_main.c  uringblk_sysfs.c  uringblk_test.c  wal_driver.h  wal_driver_main.c  wal_driver_main.mod.c  wal_test.c
include/: kvm_output.h  kvm_probe.h  kvm_uringblk.h  kvm_wal.h  uringblk_uapi.h
include/kvm_db/: config.h
include/uapi/: kdb.h
src/: chrdev.c  cp_pool.c  cp_pool.h  kdb_cache.mod.c  kdb_main.c  kdb_module.h  kvm_db.cc  kvm_probe.cc  kvm_uringblk.cc  kvm_wal.cc  lp_state.c  lp_state.h  vma.c
tests/: fixed_test_char_uring_cmd.c  mmap_probe.c  simple_test.c
